--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <li><button class="nav-btn" data-page="projects">Projects</button></li>
                         <li><button class="nav-btn" data-page="contact">Contact</button></li>
                     </ul>
-                </main>
+                </div>
             </nav>
         </div>
 
@@ -483,7 +483,7 @@
                 <div class="contact-card">
                     <h3>Roy Roberts, PhD</h3>
                     <p>For research inquiries, collaboration opportunities, or general questions:</p>
-                    <p><strong>Email:</strong> <a href="mailto:roy@fldtheory.org">roy@fldtheory.org</a></p>
+                    <p><strong>Email:</strong> <a href="https://mail.google.com/mail/?view=cm&to=roy@fldtheory.org" target="_blank">roy@fldtheory.org</a></p>
                     <p><strong>ORCID:</strong> <a href="https://orcid.org/0009-0002-5048-9724" target="_blank">https://orcid.org/0009-0002-5048-9724</a></p>
                     <p><strong>Publications:</strong> <a href="https://figshare.com/authors/Roy_Roberts/19338289" target="_blank">Figshare Research Papers</a></p>
                 </div>
@@ -573,7 +573,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <script>
         // Apply shared card styles
