--- a/index.html
+++ b/index.html
@@ -505,6 +505,10 @@
                 <div style="display: flex; gap: 0.5rem; justify-content: center; margin-top: 1rem;">
                     <div class="slide-dot active" onclick="goToLangSlide(1)"></div>
                     <div class="slide-dot" onclick="goToLangSlide(2)"></div>
+                    <div class="slide-dot" onclick="goToLangSlide(3)"></div>
+                    <div class="slide-dot" onclick="goToLangSlide(4)"></div>
+                    <div class="slide-dot" onclick="goToLangSlide(5)"></div>
+                    <div class="slide-dot" onclick="goToLangSlide(6)"></div>
                 </div>
             </div>
         </div>
@@ -627,7 +631,7 @@
         }
 
         let currentLangSlide = 1;
-        const totalLangSlides = 2;
+        const totalLangSlides = 6;
         let typingActive = false;
 
         function initLanguageSlides() {
