--- a/translator.html
+++ b/translator.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Process Language Translator</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+"Fix Tailwind CDN for translator styling"
 </head>
 <body class="bg-gray-950 text-gray-100 min-h-screen flex flex-col items-center justify-center p-6">
   <header class="text-center mb-6">
