Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -377,6 +377,15 @@
     </style>
 </head>
 <body>
+      <!-- Quick access to the Translator tool -->
+  <div style="margin: 16px; text-align: center; position: relative; z-index: 10;">
+    <a href="translator.html"
+       style="display:inline-block; padding:10px 20px; border:1px solid #444; border-radius:8px;
+              text-decoration:none; background:#222; color:#fff; font-family:Georgia, serif;">
+      ▶ Process Language Translator
+    </a>
+  </div>
+
     <div class="stars" id="stars"></div>
 
     <main class="container">
@@ -875,4 +884,5 @@
 </body>
 
 </html>
+
 
