--- a/translator.html
+++ b/translator.html
@@ -51,5 +51,31 @@
       document.getElementById('outputSection').classList.remove('hidden');
     });
   </script>
+  <!-- Return to Home button -->
+<div style="text-align:center; margin-top: 40px;">
+  <a href="index.html" class="cosmic-button">⬅ Return to Home</a>
+</div>
+
+<style>
+  .cosmic-button {
+    display: inline-block;
+    padding: 12px 28px;
+    border-radius: 10px;
+    background: radial-gradient(circle at top left, #0ff 0%, #0088ff 70%);
+    color: white;
+    font-family: 'Georgia', serif;
+    font-size: 1.1em;
+    text-decoration: none;
+    box-shadow: 0 0 12px rgba(0,255,255,0.6);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .cosmic-button:hover {
+    background: radial-gradient(circle at top left, #66ffff 0%, #00ccff 70%);
+    box-shadow: 0 0 25px rgba(0,255,255,0.8);
+    transform: scale(1.05);
+  }
+</style>
+
 </body>
 </html>
