--- a/translator.html
+++ b/translator.html
@@ -14,6 +14,17 @@
       Transform static statements into dynamic, process-oriented language that reflects flow, interaction, and emergence.
     </p>
   </header>
+<!-- Return to Home -->
+<div style="text-align:center; margin: 10px 0 20px 0;">
+  <a href="/" 
+     style="display:inline-block; padding:12px 24px; border-radius:10px;
+            background: radial-gradient(circle at top left, #0ff 0%, #0088ff 70%);
+            color:#fff; text-decoration:none; font-family:Georgia, serif; font-size:1.05rem;
+            border:1px solid #444; box-shadow:0 0 16px rgba(0,255,255,0.6);
+            transition: all .25s ease;">
+    ⬅ Return to Home
+  </a>
+</div>
 
   <main class="w-full max-w-2xl">
     <textarea id="inputText" rows="6"
