--- a/index.html
+++ b/index.html
@@ -401,6 +401,72 @@
     box-shadow: 0 0 25px rgba(0,255,255,0.8);
     transform: scale(1.05);
   }
+    /* ==== Hero layout + portrait ==== */
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;          /* centers headline + portrait together */
+  gap: 20px;                        /* space between text + portrait */
+  flex-wrap: wrap;                  /* stack on small screens */
+  margin: 24px auto 8px;
+  max-width: 1100px;
+  position: relative;
+  z-index: 5;                       /* above starfield */
+}
+
+.hero-text {
+  text-align: center;
+  color: #e7eefc;
+  text-shadow: 0 0 10px rgba(70,120,255,0.25);
+}
+
+.hero-text h1 {
+  font-size: clamp(28px, 4vw, 46px);
+  line-height: 1.12;
+  margin: 0;
+}
+
+.hero-text p {
+  max-width: 680px;
+  margin: 10px auto 0;
+  color: #c8d3f7;
+}
+
+.hero-portrait {
+  width: 120px;                     /* SMALL, tasteful */
+  height: 120px;
+  border-radius: 9999px;            /* circle */
+  object-fit: cover;
+  object-position: center;
+  border: 1px solid rgba(180,200,255,0.35);
+  box-shadow:
+    0 0 0 3px rgba(25,35,80,0.35) inset,
+    0 8px 30px rgba(30,120,255,0.25),
+    0 0 18px rgba(80,180,255,0.25);
+  filter: saturate(1.05);
+  opacity: 0.95;
+}
+
+/* slightly larger on wide screens */
+@media (min-width: 900px) {
+  .hero-portrait { width: 160px; height: 160px; }
+}
+
+/* optional: subtle glow ring behind portrait */
+.hero-portrait-wrap {
+  position: relative;
+}
+.hero-portrait-wrap::after {
+  content: "";
+  position: absolute;
+  inset: -8px;
+  border-radius: 9999px;
+  background: radial-gradient(60% 60% at 50% 45%,
+    rgba(90,160,255,0.15), rgba(0,0,0,0) 70%);
+  filter: blur(6px);
+  z-index: -1;
+}
+
 </style>
 
 
@@ -902,6 +968,7 @@
 </body>
 
 </html>
+
 
 
 
