--- a/index.html
+++ b/index.html
@@ -466,6 +466,36 @@
   filter: blur(6px);
   z-index: -1;
 }
+/* ===== Balanced hero (title + small portrait) ===== */
+.hero{
+  display:flex; align-items:center; justify-content:center;
+  gap:20px; flex-wrap:wrap; margin:24px auto 8px; max-width:1100px;
+  position:relative; z-index:5;
+}
+.hero-text{ text-align:center; color:#e7eefc; text-shadow:0 0 10px rgba(70,120,255,.25); }
+.hero-text .main-title{ margin:0; font-size:clamp(28px,4vw,46px); line-height:1.12; }
+   <!-- HERO START -->
+<div class="hero">
+  <div class="hero-text">
+ 
+.hero-subtitle{ max-width:680px; margin:10px auto 0; color:#c8d3f7; }
+
+.hero-portrait{ width:150px; height:150px; border-radius:9999px; object-fit:cover;
+  border:1px solid rgba(180,200,255,.35);
+  box-shadow: 0 0 0 3px rgba(25,35,80,.35) inset, 0 8px 30px rgba(30,120,255,.25), 0 0 18px rgba(80,180,255,.25);
+  filter:saturate(1.05); opacity:.95;
+}
+.hero-portrait-wrap{ position:relative; }
+.hero-portrait-wrap::after{
+  content:""; position:absolute; inset:-8px; border-radius:9999px;
+  background:radial-gradient(60% 60% at 50% 45%, rgba(90,160,255,.15), rgba(0,0,0,0) 70%);
+  filter:blur(6px); z-index:-1;
+}
+@media (min-width:900px){ .hero-portrait{ width:160px; height:160px; } }
+@media (max-width:700px){
+  .hero{ gap:14px; margin:16px auto 6px; }
+  .hero-portrait{ width:110px; height:110px; box-shadow:0 6px 18px rgba(30,120,255,.22); }
+}
 
 </style>
 
@@ -475,7 +505,17 @@
     <main class="container">
         <div class="header-section">
             <h1 class="main-title" onclick="showPage('home')">CROSSROADS</h1>
-            <p class="main-tagline">Where ideas meet and new paths begin</p>
+            <p class="hero-subtitle">Where ideas meet and new paths begin</p>
+  </div> <!-- /.hero-text -->
+  <div class="hero-portrait-wrap">
+    <!-- Use your actual portrait path for src -->
+    <img src="starry-night.png (1536x1024" alt="Portrait"
+         class="hero-portrait" width="160" height="160"
+         loading="lazy" decoding="async">
+  </div>
+</div>
+<!-- HERO END -->
+
              <!-- Discrete view counter with metrics -->
             <div style="position: absolute; top: 1rem; right: 2rem; font-size: 0.7rem; color: #666; font-family: monospace; text-align: right; line-height: 1.4;">
                 <div id="totalViews">Total: 0</div>
@@ -968,6 +1008,7 @@
 </body>
 
 </html>
+
 
 
 
