--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
   </div> <!-- /.hero-text -->
   <div class="hero-portrait-wrap">
     <!-- Use your actual portrait path for src -->
-    <img src="starry-night.png (1536x1024" alt="Portrait"
+    <img src="Contemplating the Cosmos.png" alt="Portrait"
          class="hero-portrait" width="160" height="160"
          loading="lazy" decoding="async">
   </div>
@@ -1008,6 +1008,7 @@
 </body>
 
 </html>
+
 
 
 
