Fixed missing 'd' in document

--- a/translator.html
+++ b/translator.html
@@ -109,7 +109,7 @@
     "spin": "intrinsic angular momentum pattern"
 };
 
-   ocument.getElementById('translateBtn').addEventListener('click', () => {
+  document.getElementById('translateBtn').addEventListener('click', () => {
   let text = document.getElementById('inputText').value;
   if (!text.trim()) return;
   
