--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                     <p>Something fundamental about how we describe reality might be... backwards. Ready to explore?</p>
                 </div>
                 
-                <div class="illustration-wrap">
+                <div class="illustration-wrap" style="display: none;">
                     <img src="https://raw.githubusercontent.com/GrummanGuy/Crossroads/main/images/Contemplating%20the%20Cosmos.png" 
                          alt="Contemplating the Cosmos" 
                          class="illustration"
@@ -1767,3 +1767,4 @@
     </script>
 </body>
 </html>
+
