--- a/index.html
+++ b/index.html
@@ -1515,6 +1515,8 @@
             <div class="subpage-content">
                 <h3>Roy Roberts, PhD</h3>
                 <p><strong>Email:</strong> <a href="mailto:roy@fldtheory.org">roy@fldtheory.org</a></p>
+                <p><strong>ORCID:</strong> <a href="https://orcid.org/0009-0002-5048-9724" target="_blank">0009-0002-5048-9724</a></p>
+                <p><strong>Publications:</strong> <a href="https://figshare.com/authors/Roy_Roberts/19338289" target="_blank">Figshare</a></p>
                 <p><strong>Organization:</strong> HOW2LLC</p>
                 
                 <h2 style="margin-top: 2rem;">Connect</h2>
