--- a/index.html
+++ b/index.html
@@ -1670,6 +1670,7 @@ window.translateText = translateText;
   });
 })();
 
+</script>
 <script>
 // === Robust nav wiring (event delegation) ===
 document.addEventListener('DOMContentLoaded', function() {
